[package]
name = "hash-server-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde: Core framework for serialization and deserialization.
serde = { version = "1.0", features = ["derive"] }
# Serde Derive: Macros for automatically generating serialization and deserialization code.
serde_derive = "1.0"    
# RMP Serde: Integration of Serde with MessagePack for efficient binary serialization.
rmp-serde = "1.0"       
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
